plugins {
    id 'org.springframework.boot' version '3.3.2' apply false
    id 'io.spring.dependency-management' version '1.1.6' apply false
}

group = 'me.go-gradually'
version = '1.0-SNAPSHOT'

subprojects {
    apply plugin: 'java'

    repositories {
        mavenCentral()
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    dependencies {
        testImplementation platform('org.junit:junit-bom:5.10.0')
        testImplementation 'org.junit.jupiter:junit-jupiter'
        testImplementation 'org.mockito:mockito-core:5.12.0'
        testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    test {
        useJUnitPlatform()
    }
}

tasks.register('checkMethodLength', Exec) {
    workingDir rootDir
    commandLine 'bash', "$rootDir/scripts/check_method_length.sh"
}

subprojects {
    tasks.matching { it.name == 'check' }.configureEach {
        dependsOn rootProject.tasks.named('checkMethodLength')
    }
}
